--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -12,4 +12,4 @@ html
             script(type="text/javascript", src="js/release.js")
 
     body
-        include ./pages/main.jade
+        include pages/main
