--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -4,12 +4,8 @@ html
         title=package.name
         meta(charset="utf-8")
         meta(name="description" content=package.description)
-        link(rel="icon", type="image/png", href="img/favicon.png")
-
-        if develop
-            script(type="text/javascript", src="js/develop.js")
-        else
-            script(type="text/javascript", src="js/release.js")
+        link(rel="icon" type="image/png" href="img/favicon.png")
+        script(type="text/javascript" src="js/main.js")
 
     body
         include pages/main
